# DEPRECIATED-pp_alvium_driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  plugins.xml
DynamicLib/: info.txt
calib/: 210304.yml  210304_second.yml  210330_the_rgb_alv_params.yml  210408_no_opt_constraints.yml  210421_NIR.yml  210719_1_cam_static_param0.yaml  210719_rgb.yaml  210720_info_which_is_best.txt  210722_nir.yaml  4nir.yml  5m_params.yml  rgb2.yaml  rgb3.yaml  test_params.yml
cfg/: AvtVimbaCamera.cfg
config/: params.yaml
include/pp_alvium_driver/: avt_vimba_camera.h  frame_observer.h  mono_camera.h  mono_camera_nodelet.h
include/pp_alvium_driver/VimbaCPP/Examples/VimbaViewer/Source/UI/: ControllerTreeWindow.cpp
launch/: mono_camera.launch  mono_camera_orig.launch  mono_camera_pp.launch  nir_only.launch  nir_only_cpp.launch  nir_only_python.launch  rbg_only.launch  rgb_only.launch  rgb_only_cpp.launch  rgb_only_python.launch
scripts/: pp_multithreading.py  ros_alvium_driver.py  ros_alvium_nir.py  ros_alvium_rgb.py
src/: avt_vimba_camera.cpp  frame_observer.cpp  mono_camera.cpp
src/nodes/: mono_camera_node.cpp  mono_camera_nodelet.cpp
src/pp_alvium_driver/: alvium_driver.py
