<?xml version="1.0"?>
<package format="2">
  <name>pp_alvium_driver</name>
  <version>0.0.1</version>
  <description>pp_alvium_driver node</description>

  <author>Maciej Trzeciak</author>
  <maintainer email="maciej.trzeciak@hotmail.com">Maciej Trzeciak</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
<!--  <depend>roscpp</depend>-->
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
